<resources>
    <string name="app_name">台北旅遊</string>
    <string name="address">地址</string>
    <string name="last_update_time">最後更新時間</string>
    <string name="chinese_traditional">繁體中文</string>
    <string name="chinese_simple">简体中文</string>
    <string name="english">English</string>
    <string name="japanese">日本語</string>
    <string name="korean_language">한국어</string>
    <string name="spanish">Ortografía del español</string>
    <string name="indonesian">Bahasa Indonesia</string>
    <string name="thai">อักษรไทย</string>
    <string name="vietnamese">Tiếng Việt</string>
</resources>