<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/zhtw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chinese_traditional"/>
    <TextView
        android:id="@+id/zhcn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chinese_simple"/>
    <TextView
        android:id="@+id/en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/english"/>
    <TextView
        android:id="@+id/japanese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/japanese"/>
    <TextView
        android:id="@+id/korean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/korean_language"/>
    <TextView
        android:id="@+id/spanish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spanish"/>
    <TextView
        android:id="@+id/indonesian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indonesian"/>
    <TextView
        android:id="@+id/thai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thai"/>
    <TextView
        android:id="@+id/vietnamese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vietnamese"/>
</androidx.appcompat.widget.LinearLayoutCompat>